New assignment added,BUG on Wire

--- a/index.html
+++ b/index.html
@@ -41,6 +41,7 @@
           </p>
         </div>
       </div>
+
       <div class="blog-card alt">
         <div class="meta">
           <div class="photo" style="background-image: url(images/DesignThumbnail.png)"></div>
@@ -66,6 +67,38 @@
            </p>
           <p class="read-more">
             <a target="_blank" href="https://yogesh0775.github.io/FigmaDesign/">Read More</a>
+          </p>
+        </div>
+      </div>
+
+
+      <div class="blog-card">
+        <div class="meta">
+            <div class="photo" style="background-image: url(images/frontpage.png) "></div>
+          <ul class="details">
+            <li class="author"><a href="#">Yogesh Bhandari</a></li>
+            <li class="date">Feb. 03, 2024</li>
+            <li class="tags">
+              <ul>
+                <li><a href="#">Learn</a></li>
+                <li><a href="#">Code</a></li>
+                <li><a href="#">Java Script</a></li>
+                <li><a href="#">Canvas</a></li>
+
+               
+              </ul>
+            </li>
+          </ul>
+        </div>
+        <div class="description">
+          <h1>BUG ON WIRE</h1>
+          <h2>Game Development</h2>
+          <p> 
+            Experience the thrill of navigating a bug along electrified wires in our captivating game. Dodge obstacles,
+             race against time, and immerse yourself in the challenging world of 'Bug on Wire,' where quick reflexes determine your success
+           </p>
+          <p class="read-more">
+            <a href="https://yogesh0775.github.io/BUG-ON-WIRE/">PLAY GAME</a>
           </p>
         </div>
       </div>
